# rescomp-rs

./: .gitignore  Cargo.toml  Makefile.toml  build.rs
src/: controlled_time_evolution.rs  lib.rs  time_evolution.rs
src/activation_function/: biased_activation_function.rs  mod.rs
src/controlled_reservoir/: controlled_reservoir_computer.rs  controlled_reservoir_computer_dynamics.rs  controlled_reservoir_dynamics.rs  core_controlled_reservoir.rs  mod.rs
src/echo_state_network/: mod.rs  sparse_discrete_echo_state_network.rs  sparse_leaky_integrator_echo_state_network.rs
src/input_projection/: default_input_projection.rs  identity_projection_with_embedding.rs  input_projection_with_embedding.rs  mod.rs
src/output_projection/: linear_state_projection.rs  mod.rs
src/reservoir/: core_reservoir.rs  mod.rs  reservoir_computer.rs  reservoir_computer_dynamics.rs  reservoir_dynamics.rs  training.rs
src/state_measurement/: constant_extension_state_measurement.rs  default_state_measurement.rs  extended_lu_state_measurement.rs  lu_state_measurement.rs  mod.rs
tests/: esn_test.rs
