[package]
name = "rescomp"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["lapack"]
lapack = ["nalgebra-lapack", "blas-sys"]

[dependencies]
num-traits = "0.2"
nalgebra = "0.31"
nalgebra-sparse = "0.7"
nalgebra-lapack = { version = "0.22", optional = true, default-features = false, features = ["openblas"] }
blas-sys = { version = "0.7", optional = true }
rand = "0.8"
